 * Added SIP_CODEC_OUTBOUND dialplan variable which can be used to set the codec
   to be used for the outgoing call. It must be one of the codecs configured
   for the device.
 * Added tlsprivatekey option to sip.conf.  This allows a separate .pem file
   to be used for holding a private key.  If tlsprivatekey is not specified,
   tlscertfile is searched for both public and private key.

Applications
------------
 * Added progress option to the app_dial D() option.  When progress DTMF is
   present, those values are sent immediatly upon receiving a PROGRESS message
   regardless if the call has been answered or not.
 * Added functionality to the app_dial F() option to continue with execution
   at the current location when no parameters are provided.
 * Added c() option to app_chanspy. This option allows custom DTMF to be set
   to cycle through the next avaliable channel.  By default this is still '*'.
 * Added x() option to app_chanspy.  This option allows DTMF to be set to
   exit the application.

Dialplan Functions
------------------
 * Added new dialplan functions CONNECTEDLINE and REDIRECTING which permits
   setting various connected line and redirecting party information.
 * The CHANNEL() function now supports the "name" option.

Queue changes
-------------
  * A new option, 'I' has been added to both app_queue and app_dial.
    By setting this option, Asterisk will not update the caller with
    connected line changes or redirecting party changes when they occur.

mISDN channel driver (chan_misdn) changes
----------------------------------------
  * Added display_connected parameter to misdn.conf to put a display string
    in the CONNECT message containing the connected name and/or number if
    the presentation setting permits it.
  * Added display_setup parameter to misdn.conf to put a display string
    in the SETUP message containing the caller name and/or number if the
    presentation setting permits it.